--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
-  "java": "java",
   "apktool": "apktool.jar",
   "template": "template",
   "cache": "cache",
-  "dex2jar": "dex-tools/d2j-dex2jar.bat"
+  "dex2jar": "dex-tools/d2j-dex2jar.bat",
+  "rtxtMaker": "RtxtMaker.jar"
 }
