--- a/data/template/build.gradle
+++ b/data/template/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
         mavenCentral()
+        google()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-
+        classpath 'com.github.Mosect:Android-SmaliPlugin:1.1.1-b10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
