--- a/data/template/build.gradle
+++ b/data/template/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-        classpath 'com.github.Mosect:Android-SmaliPlugin:1.1.1-b10'
+        classpath 'com.github.Mosect:Android-SmaliPlugin:1.1.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
